src/GraphqlToTsql/CodeGen/GqlParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Gql.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace GraphqlToTsql.CodeGen {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class GqlParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, NAME=52, STRING=53, 
		BLOCK_STRING=54, ID=55, FLOAT=56, INT=57, PUNCTUATOR=58, WS=59, COMMA=60, 
		LineComment=61, UNICODE_BOM=62, UTF8_BOM=63, UTF16_BOM=64, UTF32_BOM=65;
	public const int
		RULE_document = 0, RULE_definition = 1, RULE_executableDefinition = 2, 
		RULE_operationDefinition = 3, RULE_operationType = 4, RULE_selectionSet = 5, 
		RULE_selection = 6, RULE_field = 7, RULE_fieldName = 8, RULE_arguments = 9, 
		RULE_argument = 10, RULE_alias = 11, RULE_fragmentSpread = 12, RULE_fragmentDefinition = 13, 
		RULE_fragmentName = 14, RULE_typeCondition = 15, RULE_inlineFragment = 16, 
		RULE_value = 17, RULE_intValue = 18, RULE_floatValue = 19, RULE_booleanValue = 20, 
		RULE_stringValue = 21, RULE_nullValue = 22, RULE_enumValue = 23, RULE_listValue = 24, 
		RULE_objectValue = 25, RULE_objectField = 26, RULE_variable = 27, RULE_variableDefinitions = 28, 
		RULE_variableDefinition = 29, RULE_defaultValue = 30, RULE_type_ = 31, 
		RULE_namedType = 32, RULE_listType = 33, RULE_directives = 34, RULE_directive = 35, 
		RULE_typeSystemDefinition = 36, RULE_typeSystemExtension = 37, RULE_schemaDefinition = 38, 
		RULE_rootOperationTypeDefinition = 39, RULE_schemaExtension = 40, RULE_operationTypeDefinition = 41, 
		RULE_description = 42, RULE_typeDefinition = 43, RULE_typeExtension = 44, 
		RULE_scalarTypeDefinition = 45, RULE_scalarTypeExtension = 46, RULE_objectTypeDefinition = 47, 
		RULE_implementsInterfaces = 48, RULE_fieldsDefinition = 49, RULE_fieldDefinition = 50, 
		RULE_argumentsDefinition = 51, RULE_inputValueDefinition = 52, RULE_objectTypeExtension = 53, 
		RULE_interfaceTypeDefinition = 54, RULE_interfaceTypeExtension = 55, RULE_unionTypeDefinition = 56, 
		RULE_unionMemberTypes = 57, RULE_unionTypeExtension = 58, RULE_enumTypeDefinition = 59, 
		RULE_enumValuesDefinition = 60, RULE_enumValueDefinition = 61, RULE_enumTypeExtension = 62, 
		RULE_inputObjectTypeDefinition = 63, RULE_inputFieldsDefinition = 64, 
		RULE_inputObjectTypeExtension = 65, RULE_directiveDefinition = 66, RULE_directiveLocations = 67, 
		RULE_directiveLocation = 68, RULE_executableDirectiveLocation = 69, RULE_typeSystemDirectiveLocation = 70, 
		RULE_name = 71;
	public static readonly string[] ruleNames = {
		"document", "definition", "executableDefinition", "operationDefinition", 
		"operationType", "selectionSet", "selection", "field", "fieldName", "arguments", 
		"argument", "alias", "fragmentSpread", "fragmentDefinition", "fragmentName", 
		"typeCondition", "inlineFragment", "value", "intValue", "floatValue", 
		"booleanValue", "stringValue", "nullValue", "enumValue", "listValue", 
		"objectValue", "objectField", "variable", "variableDefinitions", "variableDefinition", 
		"defaultValue", "type_", "namedType", "listType", "directives", "directive", 
		"typeSystemDefinition", "typeSystemExtension", "schemaDefinition", "rootOperationTypeDefinition", 
		"schemaExtension", "operationTypeDefinition", "description", "typeDefinition", 
		"typeExtension", "scalarTypeDefinition", "scalarTypeExtension", "objectTypeDefinition", 
		"implementsInterfaces", "fieldsDefinition", "fieldDefinition", "argumentsDefinition", 
		"inputValueDefinition", "objectTypeExtension", "interfaceTypeDefinition", 
		"interfaceTypeExtension", "unionTypeDefinition", "unionMemberTypes", "unionTypeExtension", 
		"enumTypeDefinition", "enumValuesDefinition", "enumValueDefinition", "enumTypeExtension", 
		"inputObjectTypeDefinition", "inputFieldsDefinition", "inputObjectTypeExtension", 
		"directiveDefinition", "directiveLocations", "directiveLocation", "executableDirectiveLocation", 
		"typeSystemDirectiveLocation", "name"
	};

	private static readonly string[] _LiteralNames = {
		null, "'query'", "'mutation'", "'subscription'", "'{'", "'}'", "'('", 
		"')'", "':'", "'...'", "'fragment'", "'on'", "'true'", "'false'", "'null'", 
		"'['", "']'", "'$'", "'='", "'!'", "'@'", "'schema'", "'extend'", "'scalar'", 
		"'extends'", "'type'", "'implements'", "'&'", "'interface'", "'union'", 
		"'|'", "'enum'", "'input'", "'directive'", "'QUERY'", "'MUTATION'", "'SUBSCRIPTION'", 
		"'FIELD'", "'FRAGMENT_DEFINITION'", "'FRAGMENT_SPREAD'", "'INLINE_FRAGMENT'", 
		"'SCHEMA'", "'SCALAR'", "'OBJECT'", "'FIELD_DEFINITION'", "'ARGUMENT_DEFINITION'", 
		"'INTERFACE'", "'UNION'", "'ENUM'", "'ENUM_VALUE'", "'INPUT_OBJECT'", 
		"'INPUT_FIELD_DEFINITION'", null, null, null, null, null, null, null, 
		null, "','", null, null, "'\uEFBBBF'", "'\uFEFF'", "'\u0000FEFF'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "NAME", "STRING", "BLOCK_STRING", "ID", "FLOAT", 
		"INT", "PUNCTUATOR", "WS", "COMMA", "LineComment", "UNICODE_BOM", "UTF8_BOM", 
		"UTF16_BOM", "UTF32_BOM"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Gql.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static GqlParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public GqlParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public GqlParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class DocumentContext : ParserRuleContext {
		public DefinitionContext[] definition() {
			return GetRuleContexts<DefinitionContext>();
		}
		public DefinitionContext definition(int i) {
			return GetRuleContext<DefinitionContext>(i);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_document; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGqlListener typedListener = listener as IGqlListener;
			if (typedListener != null) typedListener.EnterDocument(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGqlListener typedListener = listener as IGqlListener;
			if (typedListener != null) typedListener.ExitDocument(this);
		}
	}

	[RuleVersion(0)]
	public DocumentContext document() {
		DocumentContext _localctx = new DocumentContext(Context, State);
		EnterRule(_localctx, 0, RULE_document);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 145;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 144; definition();
				}
				}
				State = 147;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__9) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__27) | (1L << T__28) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << STRING) | (1L << BLOCK_STRING))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DefinitionContext : ParserRuleContext {
		public ExecutableDefinitionContext executableDefinition() {
			return GetRuleContext<ExecutableDefinitionContext>(0);
		}
		public TypeSystemDefinitionContext typeSystemDefinition() {
			return GetRuleContext<TypeSystemDefinitionContext>(0);
		}
		public TypeSystemExtensionContext typeSystemExtension() {
			return GetRuleContext<TypeSystemExtensionContext>(0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_definition; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGqlListener typedListener = listener as IGqlListener;
			if (typedListener != null) typedListener.EnterDefinition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGqlListener typedListener = listener as IGqlListener;
			if (typedListener != null) typedListener.ExitDefinition(this);
		}
	}

	[RuleVersion(0)]
	public DefinitionContext definition() {
		DefinitionContext _localctx = new DefinitionContext(Context, State);
		EnterRule(_localctx, 2, RULE_definition);
		try {
			State = 152;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
			case T__1:
			case T__2:
			case T__3:
			case T__9:
				EnterOuterAlt(_localctx, 1);
				{
				State = 149; executableDefinition();
				}
				break;
			case T__20:
			case T__22:
			case T__24:
			case T__27:
			case T__28:
			case T__30:
			case T__31:
			case T__32:
			case STRING:
			case BLOCK_STRING:
				EnterOuterAlt(_localctx, 2);
				{
				State = 150; typeSystemDefinition();
				}
				break;
			case T__21:
			case T__23:
				EnterOuterAlt(_localctx, 3);
				{
				State = 151; typeSystemExtension();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExecutableDefinitionContext : ParserRuleContext {
		public OperationDefinitionContext operationDefinition() {
			return GetRuleContext<OperationDefinitionContext>(0);
		}
		public FragmentDefinitionContext fragmentDefinition() {
			return GetRuleContext<FragmentDefinitionContext>(0);
		}
		public ExecutableDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_executableDefinition; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGqlListener typedListener = listener as IGqlListener;
			if (typedListener != null) typedListener.EnterExecutableDefinition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGqlListener typedListener = listener as IGqlListener;
			if (typedListener != null) typedListener.ExitExecutableDefinition(this);
		}
	}

	[RuleVersion(0)]
	public ExecutableDefinitionContext executableDefinition() {
		ExecutableDefinitionContext _localctx = new ExecutableDefinitionContext(Context, State);
		EnterRule(_localctx, 4, RULE_executableDefinition);
		try {
			State = 156;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
			case T__1:
			case T__2:
			case T__3:
				EnterOuterAlt(_localctx, 1);
				{
				State = 154; operationDefinition();
				}
				break;
			case T__9:
				EnterOuterAlt(_localctx, 2);
				{
				State = 155; fragmentDefinition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OperationDefinitionContext : ParserRuleContext {
		public OperationTypeContext operationType() {
			return GetRuleContext<OperationTypeContext>(0);
		}
		public SelectionSetContext selectionSet() {
			return GetRuleContext<SelectionSetContext>(0);
		}
		public NameContext name() {
			return GetRuleContext<NameContext>(0);
		}
		public VariableDefinitionsContext variableDefinitions() {
			return GetRuleContext<VariableDefinitionsContext>(0);
		}
		public DirectivesContext directives() {
			return GetRuleContext<DirectivesContext>(0);
		}
		public OperationDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_operationDefinition; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGqlListener typedListener = listener as IGqlListener;
			if (typedListener != null) typedListener.EnterOperationDefinition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGqlListener typedListener = listener as IGqlListener;
			if (typedListener != null) typedListener.ExitOperationDefinition(this);
		}
	}

	[RuleVersion(0)]
	public OperationDefinitionContext operationDefinition() {
		OperationDefinitionContext _localctx = new OperationDefinitionContext(Context, State);
		EnterRule(_localctx, 6, RULE_operationDefinition);
		int _la;
		try {
			State = 171;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
			case T__1:
			case T__2:
				EnterOuterAlt(_localctx, 1);
				{
				State = 158; operationType();
				State = 160;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==NAME) {
					{
					State = 159; name();
					}
				}

				State = 163;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__5) {
					{
					State = 162; variableDefinitions();
					}
				}

				State = 166;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__19) {
					{
					State = 165; directives();
					}
				}

				State = 168; selectionSet();
				}
				break;
			case T__3:
				EnterOuterAlt(_localctx, 2);
				{
				State = 170; selectionSet();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OperationTypeContext : ParserRuleContext {
		public OperationTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_operationType; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGqlListener typedListener = listener as IGqlListener;
			if (typedListener != null) typedListener.EnterOperationType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGqlListener typedListener = listener as IGqlListener;
			if (typedListener != null) typedListener.ExitOperationType(this);
		}
	}

	[RuleVersion(0)]
	public OperationTypeContext operationType() {
		OperationTypeContext _localctx = new OperationTypeContext(Context, State);
		EnterRule(_localctx, 8, RULE_operationType);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 173;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SelectionSetContext : ParserRuleContext {
		public SelectionContext[] selection() {
			return GetRuleContexts<SelectionContext>();
		}
		public SelectionContext selection(int i) {
			return GetRuleContext<SelectionContext>(i);
		}
		public SelectionSetContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_selectionSet; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGqlListener typedListener = listener as IGqlListener;
			if (typedListener != null) typedListener.EnterSelectionSet(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGqlListener typedListener = listener as IGqlListener;
			if (typedListener != null) typedListener.ExitSelectionSet(this);
		}
	}

	[RuleVersion(0)]
	public SelectionSetContext selectionSet() {
		SelectionSetContext _localctx = new SelectionSetContext(Context, State);
		EnterRule(_localctx, 10, RULE_selectionSet);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 175; Match(T__3);
			State = 177;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 176; selection();
				}
				}
				State = 179;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==T__8 || _la==NAME );
			State = 181; Match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SelectionContext : ParserRuleContext {
		public FieldContext field() {
			return GetRuleContext<FieldContext>(0);
		}
		public FragmentSpreadContext fragmentSpread() {
			return GetRuleContext<FragmentSpreadContext>(0);
		}
		public InlineFragmentContext inlineFragment() {
			return GetRuleContext<InlineFragmentContext>(0);
		}
		public SelectionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_selection; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGqlListener typedListener = listener as IGqlListener;
			if (typedListener != null) typedListener.EnterSelection(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGqlListener typedListener = listener as IGqlListener;
			if (typedListener != null) typedListener.ExitSelection(this);
		}
	}

	[RuleVersion(0)]
	public SelectionContext selection() {
		SelectionContext _localctx = new SelectionContext(Context, State);
		EnterRule(_localctx, 12, RULE_selection);
		try {
			State = 186;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 183; field();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 184; fragmentSpread();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 185; inlineFragment();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FieldContext : ParserRuleContext {
		public FieldNameContext fieldName() {
			return GetRuleContext<FieldNameContext>(0);
		}
		public ArgumentsContext arguments() {
			return GetRuleContext<ArgumentsContext>(0);
		}
		public DirectivesContext directives() {
			return GetRuleContext<DirectivesContext>(0);
		}
		public SelectionSetContext selectionSet() {
			return GetRuleContext<SelectionSetContext>(0);
		}
		public FieldContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
